--- a/src/stylesheets/results-style.css
+++ b/src/stylesheets/results-style.css
@@ -12,46 +12,47 @@ ul {
     padding: 0;
 }
 
-body {
+main {
     display: flex;
     justify-content: center;
-    background-color: #000000;
+    border: 1px solid red;
+    width: 100%;
+    border: 1px solid blue;
 }
 
-.overlap {
-    position: relative;
-}
 
 .main-content {
     display: flex;
+    width: 70%;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 550px;
+    height: auto;
     background-color: #151515;
     border-radius: 15px;
-    padding-top: 50px;
-    margin-top: 150px;
-    margin-right: 40px;
-    margin-left: 40px;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding: 2%;
+    padding-top: 10px;
+    padding-bottom: 1px;
+  
 }
 
 .results {
     width: 100%;
-    margin-top: 10px;
-    height: 450px;
+    margin: 3px;
+    padding: 10px;
+    height: auto;
     background-color: #272727;
     border-radius: 20px;
-    margin-bottom: 15px;
     z-index: 1;
+    
+  
 }
 
 .results-list{
     width: 100%;
     height: 400px;
     overflow-y: auto;
+    
 }
 
 .intern-headers {
@@ -61,18 +62,20 @@ body {
     align-items: center;
     height: 50px;
     width: 100%;
-    background-color: #272727;
+    background-color: #5fa886;
     border-top-right-radius: 20px;
     border-top-left-radius: 20px;
-    border-bottom: 1px solid #646464;
+    border-bottom: 2px solid #000000;
     position: sticky;
     top: 0;
+
 }
 
 .intern-heading {
     display: flex;
     width: 200px;
-    font-size: 22px;
+    font-size: 30px;
+    color: #000000;
 }
 
 .invisible-green-button {
