--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -1,71 +1,47 @@
 /* Overall layout */
-.overview {
-    background-color: #191919;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-  }
+
+main {
+  flex-grow: 1; /* Make the main content area grow to fill available space */
+}
+
+html, body {
+  height: 100%; /* Full height for the page */
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.logo-background {
+  position: absolute;
+  width: 880px;
+  height: 832px;
+  top: 51px;
+  left: 650px;
+  z-index: 0;
+  display: none;
   
-  .overview .div {
-    background-color: #191919;
-    overflow: hidden;
-    width: 100%;
-    height: 832px;
-    position: relative;
-  }
+}
+
+.header-div{
+  display: flex;
+  height: 100px;
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+
   
-  .overview .overlap {
-    position: absolute;
-    width: 100%;
-    height: 964px;
-    top: -51px;
-  }
-  
-  .nav-button {
-    background: none;
-    border: none;
-    color: #fff;
-    font-size: 18px;
-    font-weight: bold;
-    cursor: pointer; /* Pointer cursor for buttons */
-    padding: 10px 20px;
-    text-decoration: none;
-  }
-  
-  .nav-button.active {
-    color: #ffffff; /* Color for active page (white) */
-  }
-  
-  .nav-button.inactive {
-    color: #706c6c; /* Light gray color for inactive buttons */
-  }
-  
-  .nav-button:hover {
-    color: #79c8a3; /* Hover effect to turn the text white */
-  }
-  
-  .overview .logo-background {
-    position: absolute;
-    width: 880px;
-    height: 832px;
-    top: 51px;
-    left: 650px;
-    z-index: 0;
-  }
-  
-  /* blur fade on top */
-  .overview .blur-fade {
+  .blur-fade { /*bottom gradient blur*/
     position: absolute;
     width: 100%;
     height: 151px;
     top: 0;
-  
     backdrop-filter: blur(100px);
     mask-image: linear-gradient(to bottom, black 40%, transparent 90%);
+    display: none;
   }
-  
-  .overview .blur-fade-2 {
+
+  .blur-fade-2 { /*bottom gradient blur*/
     position: absolute;
     width: 1370px;
     height: 151px;
@@ -74,62 +50,93 @@
     background-color: #00000040;
     backdrop-filter: blur(100px);
     mask-image: linear-gradient(to top, black 40%, transparent 90%);
+    display: none;
   }
   
-  .overview .logo {
-    position: absolute;
-    width: 331px;
-    height: 69px;
-    top: 69px;
-    left: 81px;
-  }
-  
-  /* Top Left Logo */
-  .vector {
-    width: auto;
-    max-width: 100%;
-    object-fit: contain; /* Ensures the aspect ratio is maintained */
-  }
-  
+.header-div .logo{
+  display: flex;
+  flex-direction: row;
+  width: 50%;
+  margin-left: 10%;
+}
+
   /* NESTwork Text */
-  .overview .NESTwork {
-    position: absolute;
-    width: 246px;
-    height: 69px;
-    top: -25px;
-    left: 85px;
+  .header-div .NESTwork {
     font-family: "Lato", Helvetica;
     font-weight: 400;
-    color: transparent;
     font-size: 40px;
     letter-spacing: 0;
     line-height: normal;
+    display: flex;
+  }
+
+    /* Top Left Logo */
+    .header-div .vector {
+      width: auto;
+      max-width: 100%;
+      object-fit: contain; /* Ensures the aspect ratio is maintained */
+    }
+
+    .header-div .text-wrapper {
+      font-weight: 700;
+      color: #ffffff;
+      display: flex;
+      
+    }
+    
+    .header-div .span {
+      color: #79c8a3;
+      display: flex;
+     
+    }
+    
+    
+    .header-div .navigation-bar {
+      flex-direction: row;
+      display: flex;
+      width: 60%;
+      justify-content: left;
+    }
+    
+    .nav-button {
+      background: none;
+      border: none;
+      color: #fff;
+      font-size: 18px;
+      font-weight: bold;
+      cursor: pointer; /* Pointer cursor for buttons */
+      padding: 10px 20px;
+      text-decoration: none;
+      transition: color 0.3s ease; /* Add smooth transition for hover effect */
   }
   
-  .overview .text-wrapper {
-    font-weight: 700;
-    color: #ffffff;
+  .nav-button.active {
+      color: #ffffff; /* Color for active page (white) */
   }
   
-  .overview .span {
-    color: #79c8a3;
+  .nav-button.inactive {
+      color: #706c6c; /* Light gray color for inactive buttons */
   }
   
-  .overview .vector {
-    position: absolute;
-    width: 63px;
-    height: 63px;
-    top: 3px;
-    left: 0;
+  .nav-button:hover {
+      color: #79c8a3; /* Hover effect to change text color */
   }
   
-  .overview .navigation-bar {
-    position: absolute;
-    top: 83px;
-    left: 591px;
-  }
   
-  .overview .text-wrapper-2 {
+
+  
+
+  .overview {
+    background-color: #191919;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    column-gap: 5%;
+  }
+
+  
+  /* .overview .text-wrapper-2 {
     position: absolute;
     height: 40px;
     top: 0;
@@ -142,9 +149,10 @@
     letter-spacing: 0;
     line-height: 39.6px;
     white-space: nowrap;
-  }
+    border: 1px solid blue;
+  } */
   
-  .overview .text-wrapper-3 {
+  /* .overview .text-wrapper-3 {
     position: absolute;
     height: 40px;
     top: 0;
@@ -158,37 +166,36 @@
     letter-spacing: 0;
     line-height: 39.6px;
     white-space: nowrap;
+  } */
+  
+ .footer {
+     display: flex;
+    justify-content: center;
+    padding: 20px;
+    background-color: #1a1a1a;
+    color: white;
+    width: 100%;
+    bottom: 0;
+    height: auto;
   }
   
-  .overview .footer {
-    position: absolute;
-    width: 274px;
-    height: 32px;
-    top: 840px;
-    left: 542px;
-  }
-  
-  .overview .footer-text {
+  .footer-text {
     font-family: "Lato", Helvetica;
     color: #79c8a3;
     font-weight: 300;
     font-size: 25px;
-    position: absolute;
-    width: 136px;
-    height: 3px;
-    left: 80px;
+    margin-top: 1%;
+    margin-right: 1%;
   }
   
-  .overview .footer-logo {
-    position: absolute;
-    width: 136px;
-    height: 32px;
-    top: -8px;
-  
-    left: 220px;
+  .footer-logo {
+  height: 10%;
+  width: 10%;
   }
   
   body {
+    display: flex;
+    flex-direction: column;
     font-family: "Arial", sans-serif;
     background-color: #1a1a1a;
     color: #f1f1f1;
@@ -198,26 +205,27 @@
   
   /* Intern Pool Big Box */
   .left-side {
-    width: 763px;
-    height: 585px;
-    top: 189px;
-    left: 73px;
+    width: 50%;
     background-color: #151515;
     border: 1px solid;
     border-color: #646464;
-    position: absolute;
     border-radius: 15px;
     box-shadow: 0px 4px 4px #2120201a;
     padding: 20px;
-    margin-right: 50px;
   }
-  
-  .left-side h1 {
-    text-align: center;
-    color: white;
-    padding-top: 0px;
+ 
+
+
+  .intern-pool-container h1 { 
+    text-align: center; /* Align the text in the center */
+    color: #fff; /* Adjust color */
+    font-size: 36px; /* Change the font size */
     font-weight: bold;
-  }
+    margin-bottom: 1px; /* Adds space below the heading */
+    margin-top: 0px;
+    width: 100%; /* Make sure it takes the full width */
+}
+
   
   .filters {
     margin-bottom: 10px; /* space between filter buttons and titles */
@@ -241,6 +249,7 @@
     gap: 10px;
     align-items: center;
     justify-content: center;
+    
   }
   
   .filter-buttons button {
@@ -251,6 +260,7 @@
     border-radius: 30px;
     cursor: pointer;
     transition: background-color 0.3s;
+    
   }
   
   .filter-buttons button.active {
@@ -278,41 +288,56 @@
     width: 100%;
     border-collapse: collapse;
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 10px; /* Adds space between the table and the search bar */
+    table-layout: fixed; /* Ensures columns have equal widths */
+    height: auto;
+  
+}
+
+thead {
+    display: table; /* Ensures the header behaves as a table row */
+    width: 100%;
+    table-layout: fixed; /* Consistent column width */
+    
+   
+}
+
+tbody {
+    display: block;
+    height: 270px;
+    width: 100%; /* Use full width */
+    overflow-y: auto;
+    background-color: #1e1e1e;
+    
+    
+}
+
+tbody tr {
+    display: table;
+    width: 100%;
     table-layout: fixed;
-  }
-  /* Title ; Name, Location, department */
-  thead th {
+    color: #d0d0d0;
+}
+
+thead th, tbody td {
+    width: 25%; /* Equal column widths, adjust as needed */
+    padding: 10px;
+    border-bottom: 1px solid #444;
+    
+
+}
+
+thead th {
     background-color: #262626; /* Title background color */
     color: white;
     font-weight: bold;
     text-transform: uppercase;
     padding: 12px;
-    border-bottom: 3px solid #151212; /* separator between the titles and list */
-    padding-bottom: 10px;
-  }
-  
-  /* The list box for Intern pool */
-  tbody {
-    display: block;
-    max-height: 250px;
-    width: 763px;
-    overflow-y: auto;
-    background-color: #1e1e1e;
-  }
-  
-  tbody tr {
-    display: table;
-    width: 100%;
-    table-layout: fixed;
-    color: #d0d0d0;
-  }
-  
-  tbody td {
-    padding: 10px;
-    border-bottom: 1px solid #444;
-  }
-  
+    border-bottom: 3px solid #151212; /* Separator between the titles and list */
+    
+}
+
+  /* Select Toggle buttons */
   .toggle-button {
     width: 25px;
     height: 25px;
@@ -337,23 +362,20 @@
     justify-content: space-between;
     align-items: center;
     box-sizing: border-box;
-    position: absolute; /* Now it's positioned relative to .intern-box */
-    bottom: 0; /* This positions it at the bottom of the intern box */
-    left: 0;
-    right: 0;
-    padding: 20px; /* Add padding for spacing */
-  }
-  
-  .search-bar {
+    width: 100%; /* Full width of the parent container */
+    margin-top: 20px; /* Adds space between the table and the search bar */
+}
+
+.search-bar {
     display: flex;
     align-items: center;
     background-color: #333;
     padding: 8px;
     border-radius: 10px;
-    width: 70%;
-  }
-  
-  .search-bar input {
+    width: 50%; /* Takes up 70% of the available width */
+}
+
+.search-bar input {
     width: 90%;
     padding: 8px;
     background-color: #444;
@@ -362,54 +384,62 @@
     border-radius: 10px;
     font-size: 16px;
     margin-right: 8px;
-  }
-  
-  .search-bar button {
+}
+
+.search-bar button {
     background-color: transparent;
     border: none;
     padding: 8px;
     color: #38a169;
     cursor: pointer;
-  }
-  
-  .search-bar button:hover {
-    background-color: #2f855a;
-  }
-  
-  .buttons {
+}
+
+.search-bar button:hover {
+    color: #2cf490;
+}
+
+.buttons {
     display: flex;
     justify-content: flex-end;
-  }
-  
-  .buttons button {
-    background-color: #38a169;
+    
+}
+
+.buttons button {
+    background-color: #444;
     color: white;
     border: none;
-    padding: 10px 20px;
-    border-radius: 30px;
+    padding: 10px 15px;
+    border-radius: 20px;
     cursor: pointer;
     font-size: 16px;
     margin-left: 10px;
     transition: background-color 0.3s;
-  }
-  
-  .buttons button:hover {
+    border: 1px solid #808181;
+}
+
+.buttons button:hover {
     background-color: #2f855a;
+    transition: background-color 0.3s;
+}
+
+  /* Pairing Big Box */
+
+  .right-side {
+    height: 100%;
+    width: 25%;
   }
   
-  /* Pairing Big Box */
-  .right-side .pairing-box {
-    position: absolute;
-    width: 431px;
-    height: 596px;
-    top: 188px;
-    left: 900px;
+  .pairing-box {
+    width: 100%; /* Set a percentage width */
+    height: 100%;
     background-color: #151515;
+    border: 1px solid #646464;
     border-radius: 15px;
-    border: 1px solid;
-    border-color: #646464;
     box-shadow: 0px 4px 4px #2120201a;
-    padding: 15px;
+    padding: 20px;
+   
+    
+    
   }
   
   .pairing-header {
@@ -434,6 +464,9 @@
     gap: 10px;
     justify-content: space-between;
     padding-bottom: 10px;
+    border-bottom: 1px solid #444;
+    margin-bottom: 5px;
+    
   }
   
   .pairing-controls button {
@@ -444,16 +477,20 @@
     border-radius: 30px;
     cursor: pointer;
     transition: background-color 0.3s;
+    
   }
   
   .pairing-controls span {
     font-size: 18px;
     color: white;
     border: 10px;
+    
+
+
   }
   
   .pairing-list {
-    max-height: 430px;
+    height: 400px;
     overflow-y: auto;
     padding-bottom: 10px;
   }
@@ -461,6 +498,9 @@
   .pairing-list ul {
     list-style: none;
     padding: 0;
+    
+   
+    
   }
   
   /* Individual box for Pairing box */
@@ -473,6 +513,7 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 10px;
+
   }
   
   .pairing-list::-webkit-scrollbar {
@@ -498,17 +539,11 @@
   
   /* container for generate and toggle button */
   .pairing-actions {
+    padding-top: 10px;
     display: flex;
-    justify-content: space-between; /* This already pushes the buttons to the sides */
-    align-items: center;
-    padding: 10px 20px;
-    position: absolute;
-    bottom: 10px; /* Position it at the bottom */
-    left: 0;
-    right: 0;
-    margin-top: 10px; /* Adjust or remove if not needed */
-    width: 100%; /* Takes full width */
+    justify-content: space-between;
     box-sizing: border-box;
+   
   }
   
   .green-button {
@@ -533,7 +568,7 @@
     border-radius: 30px;
     cursor: pointer;
     font-size: 16px;
-    margin-right: 15px;
+
   }
   
   .generate-button:hover {
@@ -544,17 +579,14 @@
 
   .toggle-pairing-filter {
     display: none; /* Hidden by default */
-    position: absolute; /* Position it relative to the pairing actions */
+    display: inline;
+    flex-direction: column;
     border: 1px solid #ccc;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
     z-index: 1;
     margin-top: 5px; /* Add some space above */
     border: none;
-  
-    /* new */
-    bottom: 82%;
-    left: 10px;
-    margin-bottom: 2px;
+   
   }
   
   .toggle-pairing-filter button {
@@ -566,8 +598,8 @@
     background-color: #38a169;
     cursor: pointer;
     border-radius: 30px;
-  
     margin: 5px 0;
+  
   }
   
   .toggle-pairing-filter button:hover {
